package ca.mcmaster.se2aa4.mazerunner;

public interface MazeExploration{

    Path solve();


}